# stream-dataset-json

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  analysis.ipynb  setup.cfg
.github/workflows/: test-on-push.yml  tests-package.yml
examples/: multiple_datasets.json  simple_dataset.json
src/: dataset.py  datasetjson.py  errors.py  example.py
src/streamdatasetjson/: __init__.py  dataset.py  datasetjson.py  errors.py  utils.py
streamdatasetjson/: __init__.py  dataset.py  datasetjson.py  errors.py  utils.py
tests/: test_dataset.py  test_datasetjson.py
