[metadata]
name = stream-dataset-json
version = 0.1.3
description = Package to stream-read large dataset JSON files.
long_description_content_type = text/markdown
url = https://github.com/Parexel/stream-dataset-json
project_urls =
    Bug Tracker = https://github.com/Parexel/stream-dataset-json/issues
    Changelog = https://github.com/Parexel/stream-dataset-json/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    ijson

[options.packages.find]
where = src
